# GradingSystem

./: Anchor.toml  Cargo.toml  README.md  package.json
grading_system/: Cargo.toml
grading_system/src/: lib.rs
grading_system/src/instructions/: school_main_account.rs  school_notes.rs  school_register.rs  student_register.rs
notes_system/: Cargo.toml
notes_system/src/: lib.rs
notes_system/src/instructions/: school_notes.rs
notes_system/src/state/: accounts.rs
programs/grading_system/: Cargo.toml
programs/grading_system/src/: lib.rs
programs/grading_system/src/instructions/: mod.rs  school_main_account.rs  school_notes.rs  school_register.rs  student_register.rs
programs/grading_system/src/state/: accounts.rs
programs/grading_system/src/utils/: constants.rs
src/: main.rs
src/constants/: mod.rs  program.rs  program_id.rs
src/functions/: school_main_account.rs  school_notes.rs  school_register.rs  student_register.rs
tests/: init_main_account.ts  init_school.ts  init_student.ts  set_note.ts
