[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# [package]
# name = "grading_system"
# version = "0.1.0"
# edition = "2021"
# authors = ["Mateo Lafalce <mateolafalce@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# grading_system = { path = "./grading_system", features = ["no-entrypoint"] }
# anchor-client = { version = "0.26.0", features = ["debug"] }
# anyhow = "1.0.68"
# shellexpand = "3.0.0"
