[package]
name = "grading_system"
version = "1.0.1"
description = "grading_system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grading_system"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ahash = "=0.8.6"